[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trexcmllib"
version = "0.1.2"
description = "Helpers for driving Cisco TRex nodes through CML console and STL workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "DNACENSolutions" },
]
keywords = ["trex", "cml", "cisco", "traffic-generator", "stl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/DNACENSolutions/trexcmllib"
Repository = "https://github.com/DNACENSolutions/trexcmllib"
Issues = "https://github.com/DNACENSolutions/trexcmllib/issues"

[project.scripts]
trexcmllib-open-console = "trexcmllib.examples.open_console:main"
trexcmllib-l2-traffic = "trexcmllib.examples.run_l2_traffic:main"
trexcmllib-l2-bidirectional = "trexcmllib.examples.run_l2_bidirectional:main"
trexcmllib-l3-traffic = "trexcmllib.examples.run_l3_traffic:main"
trexcmllib-l3-bidirectional = "trexcmllib.examples.run_l3_bidirectional:main"
trexcmllib-ping = "trexcmllib.examples.run_ping:main"
trexcmllib-astf-http = "trexcmllib.examples.run_astf_http:main"
trexcmllib-astf-udp = "trexcmllib.examples.run_astf_udp:main"

[tool.setuptools]
include-package-data = false
packages = ["trexcmllib", "trexcmllib.examples"]

[tool.setuptools.package-dir]
trexcmllib = "."
"trexcmllib.examples" = "examples"
